Optimize Card.getEffects(): cache effect lists instead of streaming per call
getEffects(EffectSlot) was creating a new Stream, mapping, and collecting
to a new List on every call. On the MCTS hot path (computeStaticBonus
iterates every permanent's STATIC effects), this generated massive GC
pressure. Now caches results in an EnumMap, invalidated only on addEffect.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>